More cleaning; updated README

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "socket-chat-example",
-  "version": "0.0.1",
-  "description": "my first socket.io app",
+  "name": "Math-Chat",
+  "version": "0.0.2",
+  "description": "A simple chat application that supports math using MathQuill.",
   "dependencies": {
     "express": "^4.15.2",
     "socket.io": "^1.7.3"
